...
        android:textAppearance="@android:style/TextAppearance.WindowTitle"
        android:textColor="#7676b3"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/userID"
        android:layout_marginLeft="75dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0" />
...
        android:lineSpacingExtra="8sp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/signin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/signup"
...
    <Button
        android:id="@+id/signin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="#00f7fafb"
        android:fontFamily="cursive"
        android:text="Sign In"
        android:textColor="#8b8bcf"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:layout_marginLeft="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="120dp"
...
