...
            android:id="@+id/habit"
            android:icon="@drawable/ic_menu_camera"
            android:title="Habit" />
        <item
            android:id="@+id/habitEvent"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Habit Event" />
        <item
            android:id="@+id/friends"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Friends" />
        <item
            android:id="@+id/social"
            android:icon="@drawable/ic_menu_share"
            android:title="Social" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="Setting" />
    </group>

...
