<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/UserIcon"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/newsUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="UserName"
            android:textColor="#2D9DC8"
            android:textSize="30dp"

            />

        <TextView
            android:id="@+id/newsType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="testview"
            android:textSize="30dp"

            />

        <TextView
            android:id="@+id/newsComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="15dp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="-1"
            app:srcCompat="@mipmap/ic_launcher_round" />


    </LinearLayout>

</LinearLayout>